--- a/projects/web/src/app/top-nav/top-nav.component.scss
+++ b/projects/web/src/app/top-nav/top-nav.component.scss
@@ -3,4 +3,10 @@
   top: 0;
   z-index: 1;
   padding-left: 17px;
+
+  @media (max-width: 380px) {
+    #session {
+      display: none;
+    }
+  }
 }
