añadir: código de conducta
typography

Closes #3

--- a/projects/web/src/_theme.scss
+++ b/projects/web/src/_theme.scss
@@ -31,3 +31,7 @@ $mat-light-theme-background: (
 
 // Create the theme object (a Sass map containing all of the palettes).
 $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
+
+$custom-typography: mat-typography-config(
+  $body-1: mat-typography-level(16px, 24px, 400)
+);
