--- a/projects/web/src/app/landing/landing.component.html
+++ b/projects/web/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
-<main fxLayout="column" fxLayoutAlign="start center">
-  <h1>¡Bienvenidos!</h1>
+<main>
+  <h1 class="mat-display-1">¡Bienvenidos!</h1>
   <section>
     <h2>Nuestra visión</h2>
     <p>
@@ -27,8 +27,8 @@
       </li>
     </ul>
   </section>
-  <section id="call-to-action" fxLayoutAlign="center center"
-           fxLayoutGap="32px" fxFlex="50%">
+  <section id="call-to-action" fxLayout="row wrap" fxLayoutAlign="center center"
+           fxLayoutGap="32px">
     <a mat-raised-button color="accent" href="https://goo.gl/forms/MZa4w3AeILjsoTGA2"
        target="_blank" rel="noopener">
       <mat-icon>assignment_turned_in</mat-icon>
