--- a/projects/web/src/app/nav/nav.component.scss
+++ b/projects/web/src/app/nav/nav.component.scss
@@ -1,14 +1,41 @@
 @import "../../theme";
 
+// Take care: this component has ViewEncapsulation.None
 .sidenav-container {
   height: 100%;
+
+  .mat-sidenav-content {
+    overflow: hidden;
+
+    router-outlet ~ * {
+      overflow: auto;
+      height: calc(100% - 56px);
+
+      @media (min-width: 600px) {
+        height: calc(100% - 64px);
+      }
+
+      & > * {
+        overflow: auto;
+        height: calc(100% - 56px);
+
+        @media (min-width: 600px) {
+          height: calc(100% - 64px);
+        }
+      }
+    }
+  }
 }
 .sidenav {
-  width: 200px;
-}
-.sidenav .mat-toolbar {
-  background: inherit;
-}
-a.active {
-  color: mat-color($app-primary);
+  width: 210px;
+
+  .mat-toolbar {
+    background: inherit;
+  }
+  a.active {
+    color: mat-color($app-primary);
+  }
+  .mat-nav-list a.mat-list-item:hover {
+    background-color: mat-color($app-primary, 50);
+  }
 }
