--- a/projects/web/src/app/sponsors/sponsors.component.html
+++ b/projects/web/src/app/sponsors/sponsors.component.html
@@ -1,3 +1,4 @@
+<h2 id="sponsors">Patrocinadores</h2>
 <section fxLayout="row wrap" fxLayoutAlign="center center"
 fxLayoutGap="16px" id="last-section">
   <a href="https://cloud.google.com/" target="_blank" rel="noopener noreferrer">
