refactor: adjustments to landing page layout
add a variables Sass partial
set up sponsor's template to handle an array of sponsors
update angular, rxjs, firebase, angulartics2
don't require firebase-tools installed globally

Relates to #21

--- a/projects/web/src/_theme.scss
+++ b/projects/web/src/_theme.scss
@@ -11,7 +11,7 @@ $app-accent: mat-palette($mat-red, 700);
 // The warn palette is optional (defaults to red).
 $app-warn: mat-palette($mat-deep-orange);
 
-// anular el fondo gris con blanco
+// Override the grey background with white
 $mat-light-theme-background: (
   status-bar: map_get($mat-grey, 300),
   app-bar:    map_get($mat-grey, 100),
