--- a/projects/web/src/app/sponsors/sponsors.component.scss
+++ b/projects/web/src/app/sponsors/sponsors.component.scss
@@ -1,19 +1,14 @@
 @import "../../theme";
+@import "../../variables";
 
-  h1,
-  h2 {
-    color: mat-color($app-primary);
-  }
-
-  section {
-    max-width: 800px;
-
-    &#last-section {
-      padding-bottom: 30px;
-      padding-top: 10px;
-    }
-  }
-
-  #sponsors {
-    padding-top: 80px;
-  }
+:host {
+  display: block;
+}
+h1,
+h2 {
+  color: mat-color($app-primary);
+}
+section {
+  max-width: $section-width;
+  padding-top: 16px;
+}
