para revisar footer

--- a/projects/web/src/app/landing/landing.component.html
+++ b/projects/web/src/app/landing/landing.component.html
@@ -40,5 +40,6 @@
       Chatear
     </a>
   </section>
-  <app-sponsors></app-sponsors>  
+  <app-sponsors></app-sponsors>
+  <app-footer></app-footer>
 </main>
