--- a/projects/web/src/app/footer/footer.component.html
+++ b/projects/web/src/app/footer/footer.component.html
@@ -6,9 +6,6 @@
         <a [routerLink]="['acerca']">Conócenos</a>
       </li>
       <li>
-        <a [routerLink]="['coc']">Código de conducta</a>
-      </li>
-      <li>
         <a href="https://goo.gl/forms/MZa4w3AeILjsoTGA2" rel="noopener"
            target="_blank">Regístrate</a>
       </li>
@@ -16,8 +13,14 @@
         <a href="https://chat.angular.lat/" rel="noopener" target="_blank">Chat</a>
       </li>
       <li>
-        <a [routerLink]="['terminos']">Términos</a>
+        <a [routerLink]="['conferencias']">Conferencias</a>
       </li>
+      <li>
+        <a [routerLink]="['coc']">Código de conducta</a>
+      </li>
+<!--      <li>-->
+<!--        <a [routerLink]="['terminos']">Términos</a>-->
+<!--      </li>-->
       <li>
         <a href="mailto:soporte@angular.lat">Soporte</a>
       </li>
