--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -17,13 +17,13 @@
         <mat-icon matListIcon>chat</mat-icon>
         Chatear
       </a>
+      <a mat-list-item [routerLink]="['conferencias']" routerLinkActive="active">
+        <mat-icon matListIcon>group_work</mat-icon>
+        Conferencias
+      </a>
       <a mat-list-item [routerLink]="['coc']" routerLinkActive="active">
         <mat-icon matListIcon>verified_user</mat-icon>
         Código de Conducta
-      </a>
-      <a mat-list-item [routerLink]="['conferences']" routerLinkActive="active">
-        <mat-icon matListIcon>group_work</mat-icon>
-        Conferencias
       </a>
     </mat-nav-list>
   </mat-sidenav>
