style: configurar formato - stylelint, clang-format. ajustes de VSCode

--- a/projects/web/src/app/sponsors/sponsors.component.scss
+++ b/projects/web/src/app/sponsors/sponsors.component.scss
@@ -1,5 +1,5 @@
-@import "../../theme";
-@import "../../variables";
+@import '../../theme';
+@import '../../variables';
 
 :host {
   display: block;
