--- a/projects/web/src/app/landing/landing.component.scss
+++ b/projects/web/src/app/landing/landing.component.scss
@@ -1,5 +1,5 @@
-@import "../../theme";
-@import "../../variables";
+@import '../../theme';
+@import '../../variables';
 
 main {
   padding: 32px 22px 80px;
