--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -1,8 +1,9 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
-      [attr.role]="(navService.isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(navService.isHandset$ | async) ? 'over' : 'side'"
-      [opened]="!(navService.isHandset$ | async)">
+               [disableClose]="!(navService.isHandset$ | async)"
+               [attr.role]="(navService.isHandset$ | async) ? 'dialog' : 'navigation'"
+               [mode]="(navService.isHandset$ | async) ? 'over' : 'side'"
+               [opened]="!(navService.isHandset$ | async)">
     <mat-toolbar>Menú</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item [routerLink]="['acerca']" routerLinkActive="active">
