refactor: remove `@angular/flex-layout`
as Ivy does not yet support it
- due to https://github.com/angular/angular/issues/30114
disable AOT dev mode builds since it often refreshes w/o showing changes

--- a/projects/web/src/app/footer/footer.component.html
+++ b/projects/web/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer fxLayout="row wrap" fxLayoutAlign="center none" fxLayoutGap="20px">
-  <div fxFlex="20%">
+<footer>
+  <div>
     <h2>Enlaces</h2>
     <ul>
       <li>
@@ -26,7 +26,7 @@
       </li>
     </ul>
   </div>
-  <div fxFlex="20%">
+  <div>
     <h2>Sociales</h2>
     <ul>
       <li>
