--- a/projects/web/src/app/landing/landing.component.html
+++ b/projects/web/src/app/landing/landing.component.html
@@ -27,8 +27,7 @@
       </li>
     </ul>
   </section>
-  <section id="call-to-action" fxLayout="row wrap" fxLayoutAlign="center center"
-           fxLayoutGap="32px">
+  <section id="call-to-action">
     <a mat-raised-button color="accent" href="https://goo.gl/forms/MZa4w3AeILjsoTGA2"
        target="_blank" rel="noopener">
       <mat-icon>assignment_turned_in</mat-icon>
