--- a/projects/web/src/app/sponsors/sponsors.component.html
+++ b/projects/web/src/app/sponsors/sponsors.component.html
@@ -1,5 +1,5 @@
 <h2>Patrocinadores</h2>
-<section fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="16px">
+<section>
   <a *ngFor="let sponsor of sponsors" [href]="sponsor.url" target="_blank"
      rel="noopener noreferrer">
     <img width="150px" [alt]="sponsor.alt" [src]="'assets/' + sponsor.image">
