feat(meetups): organizar meetups
Guia para organizar nuevos Meetups

--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -22,6 +22,10 @@
         <mat-icon matListIcon>group_work</mat-icon>
         Conferencias
       </a>
+      <a mat-list-item [routerLink]="['meetups']" routerLinkActive="active" >
+        <mat-icon matListIcon>event_available</mat-icon>
+        Meetups
+      </a>
       <a mat-list-item [routerLink]="['coc']" routerLinkActive="active">
         <mat-icon matListIcon>verified_user</mat-icon>
         Código de Conducta
