refactor(meetups): cambio nombre de  GuideOfMeetupsComponent
cambio de nombre en archivos guide-of-meetups

--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -22,7 +22,7 @@
         <mat-icon matListIcon>group_work</mat-icon>
         Conferencias
       </a>
-      <a mat-list-item [routerLink]="['meetups']" routerLinkActive="active" >
+      <a mat-list-item [routerLink]="['organizar/meetup']" routerLinkActive="active" >
         <mat-icon matListIcon>event_available</mat-icon>
         Meetups
       </a>
