refactor(meetups): cambio de longitud maxima por linea
Cambio de longitud maxima por linea en archivo HTML

--- a/projects/web/src/app/organize-meetup/organize-meetup.component.html
+++ b/projects/web/src/app/organize-meetup/organize-meetup.component.html
@@ -9,15 +9,16 @@
       un evento válido.
     </p>
     <p>
-      Recomendamos utilizar <a href="https://www.meetup.com/es-ES/" rel="noopener" target="_blank">Meetup</a> ya que permite controlar e identificar a los asistentes.
+      Recomendamos utilizar <a href="https://www.meetup.com/es-ES/" rel="noopener" target="_blank">
+      Meetup</a> ya que permite controlar e identificar a los asistentes.
     </p>
     <h2>2. El contenido se puede generar de muchas formas</h2>
     <p>
-      Una pequeña charla es de bastante aporte también. En mi experiencia personal, generar eventos
-      de manera constante y regular (cada semana o cada mes por ejemplo) da los mejores
-      resultados. Un evento puede constar de 2 a 3 charlas de 30 minutos, esto no es demasiado cansado
-      para las personas que asistan y además al ser poco tiempo, es factible realizarlo casi cualquier
-      día de la semana. (ver "Acerca de los formatos de evento").
+      Una pequeña charla es de bastante aporte también. En mi experiencia personal, generar
+      eventos de manera constante y regular (cada semana o cada mes por ejemplo) da los mejores
+      resultados. Un evento puede constar de 2 a 3 charlas de 30 minutos, esto no es demasiado
+      cansado para las personas que asistan y además al ser poco tiempo, es factible realizarlo
+      casi cualquier día de la semana. (ver "Acerca de los formatos de evento").
     </p>
     <h2>3. Elija un lugar</h2>
     <p>
@@ -28,8 +29,8 @@
     <h2>4. Elija un tema</h2>
     <p>
       El tema debe ser específico para que las personas que asistan sepan que van a escuchar.
-      Además, es mucho más fácil mantener un hilo conductual a lo largo del evento, generando también
-      un espacio para la discusión.
+      Además, es mucho más fácil mantener un hilo conductual a lo largo del evento, generando
+      también un espacio para la discusión.
     </p>
     <h2>5. Elija a los expositores</h2>
     <p>
@@ -39,8 +40,8 @@
     </p>
     <h2>6. Defina fecha, hora</h2>
     <p>
-      Elija un horario en el que todos los involucrados coincidan, preferiblemente con unas 3 semanas
-      de anticipación mínimo.
+      Elija un horario en el que todos los involucrados coincidan, preferiblemente con unas 3
+      semanas de anticipación mínimo.
     </p>
     <h2>7. Publique el evento</h2>
     <p>
@@ -52,68 +53,79 @@
     <h1>ACERCA DE LOS FORMATOS DE EVENTO</h1>
     <h2>Café tecnológico</h2>
     <p>
-      Charla técnica sobre un tema durante unos 40 minutos. La idea es reunirse alrededor de un tema
-      durante la hora del almuerzo / café, con la intención de presentar el tema y habilitar la discusión
-      o Q / A. Capacidad: 15 ~ 20 personas. Duración: 1 hora.
+      Charla técnica sobre un tema durante unos 40 minutos. La idea es reunirse alrededor de un
+      tema durante la hora del almuerzo / café, con la intención de presentar el tema y habilitar
+      la discusión o Q / A. Capacidad: 15 ~ 20 personas. Duración: 1 hora.
     </p>
     <h2>Meetup</h2>
     <p>
-      Consiste en un pequeño evento con 2 o 3 charlas de 40 minutos. Requiere un lugar condicionado para presentar
-      (requiere un proyector, tal vez un micrófono). Capacidad: 20 ~ 60 personas. Duración: 1 - 2 horas.
+      Consiste en un pequeño evento con 2 o 3 charlas de 40 minutos. Requiere un lugar condicionado
+      para presentar (requiere un proyector, tal vez un micrófono).
+      Capacidad: 20 ~ 60 personas. Duración: 1 - 2 horas.
     </p>
     <h2>Meetup en línea</h2>
     <p>
-      Consiste en un pequeño evento con 2 o 3 charlas de 40 minutos. Requiere poder transmitir en vivo por medio de
-      una plataforma de streaming, como YouTube Live. Capacidad: Ilimitada. . Duración: 1 - 2 horas.
+      Consiste en un pequeño evento con 2 o 3 charlas de 40 minutos. Requiere poder transmitir
+      en vivo por medio de una plataforma de streaming, como YouTube Live. Capacidad: Ilimitada.
+      Duración: 1 - 2 horas.
     </p>
     <h2>Grupo Mastermind</h2>
     <p>
-      Pequeño grupo de estudio para personas que desean aprender o hablar sobre un tema, libro o tecnología específicos.
-      Consiste en reuniones pequeñas y rápidas de reagrupación (de 1 hora a 2 horas como máximo), donde todos los
-      participantes (o algunos de ellos previamente acordados) pueden compartir sus ideas, plantear preguntas o presentar
-      una solución específica a un problema. Requiere una persona que actuará como facilitador para mediar y liderar el
-      Grupo Mastermind. Todos los miembros del equipo deben tener una comunicación constante y es recomendable tener un
-      lugar para compartir contenido y registrar las notas de las reuniones. Las sesiones se pueden realizar en línea o
-      fuera de línea en un lugar que fomente la conversación.
+      Pequeño grupo de estudio para personas que desean aprender o hablar sobre un tema,
+      libro o tecnología específicos. Consiste en reuniones pequeñas y rápidas de reagrupación
+      (de 1 hora a 2 horas como máximo), donde todos los participantes (o algunos de ellos
+      previamente acordados) pueden compartir sus ideas, plantear preguntas o presentar una
+      solución específica a un problema. Requiere una persona que actuará como facilitador para
+      mediar y liderar el Grupo Mastermind. Todos los miembros del equipo deben tener una
+      comunicación constante y es recomendable tener un lugar para compartir contenido y registrar
+      las notas de las reuniones. Las sesiones se pueden realizar en línea o fuera de línea en un
+      lugar que fomente la conversación.
       Capacidad: 3 ~ 8 personas.
       Duración: 1 ~ 2 horas
     </p>
     <h2>Taller</h2>
     <p>
-      Serie de sesiones diseñadas para hacer que un grupo de personas aprenda una habilidad o tecnología específica.
-      Debe ser muy específico, o no tan profundo debido a la brevedad del evento, sin embargo, permite a los participantes
-      practicar en torno al tema elegido. Requiere la intervención de un entrenador o líder que compartirá el contenido y
-      guiará los ejercicios de práctica. Puede realizarse en línea o en un laboratorio o salón de clase bien acondicionado
-      (requiere proyector, pizarra, marcadores). Requiere un objetivo de aprendizaje específico y también una forma de medir
-      los resultados.
-      Capacidad: 10 ~ 30 personas. Duración: 1.5 ~ 2 horas por sesión. Hasta 3 sesiones.
+      Serie de sesiones diseñadas para hacer que un grupo de personas aprenda una habilidad o
+      tecnología específica. Debe ser muy específico, o no tan profundo debido a la brevedad
+      del evento, sin embargo, permite a los participantes practicar en torno al tema elegido.
+      Requiere la intervención de un entrenador o líder que compartirá el contenido y guiará
+      los ejercicios de práctica. Puede realizarse en línea o en un laboratorio o salón de
+      clase bien acondicionado (requiere proyector, pizarra, marcadores). Requiere un objetivo
+      de aprendizaje específico y también una forma de medir los resultados.
+      Capacidad: 10 ~ 30 personas.
+      Duración: 1.5 ~ 2 horas por sesión.
+      Hasta 3 sesiones.
     </p>
     <h2>Study Jam</h2>
     <p>
-      Serie de sesiones destinadas a capacitar a un grupo de personas en torno a una tecnología o conjunto de habilidades
-      específicas. Las sesiones de entrenamiento se realizarán una tras otra durante uno o varios días. Los participantes
-      deberán practicar y estar expuestos a mucha información durante la sesión de capacitación, por lo que se supone que es
-      un evento muy intenso. Puede realizarse en línea o en un lugar o sala de clase bien acondicionado
-      (requiere proyector, pizarra, bolígrafo). Requiere un objetivo de aprendizaje específico y también una forma de medir
-      los resultados.
+      Serie de sesiones destinadas a capacitar a un grupo de personas en torno a una tecnología o
+      conjunto de habilidades específicas. Las sesiones de entrenamiento se realizarán una tras
+      otra durante uno o varios días. Los participantes deberán practicar y estar expuestos a
+      mucha información durante la sesión de capacitación, por lo que se supone que es un evento
+      muy intenso. Puede realizarse en línea o en un lugar o sala de clase bien acondicionado
+      (requiere proyector, pizarra, bolígrafo). Requiere un objetivo de aprendizaje específico y
+      también una forma de medir los resultados.
       Capacidad: 20 ~ 40 personas.
       Longitud: depende de la lista de contenidos.
     </p>
     <h2>Conferencia</h2>
     <p>
-      Serie de sesiones con el objetivo de compartir conocimientos en diferentes temas o temas generales que ocurren en
-      paralelo en el mismo lugar. Requiere varias aulas o salas de conferencias. Se puede ver como una combinación de
-      Meetups y Talleres que se realizan al mismo tiempo durante el mismo día. Capacidad: 150 a 600 personas.
+      Serie de sesiones con el objetivo de compartir conocimientos en diferentes temas o temas
+      generales que ocurren en paralelo en el mismo lugar. Requiere varias aulas o salas de
+      conferencias. Se puede ver como una combinación de Meetups y Talleres que se realizan al
+      mismo tiempo durante el mismo día.
+      Capacidad: 150 a 600 personas.
       Duración: 1 ~ 3 días.
     </p>
   </section>
   <section id="last-section">
     <h1>ACERCA DE LOS FORMATOS DE CONTENIDO</h1>
     <p>
-      Es importante recordar que la comunidad puede organizarse para desarrollar otros tipos de contenido como por ejemplo
-      podcast, videos, cursos, artículos y tutoriales, dependiendo de las necesidades de los asistentes, recomendamos realizar
-      una pequeña encuesta para conocer mejor a la comunidad y poder ofrecer el mejor formato de contenido junto con las
-      reuniones que se realicen.
+      Es importante recordar que la comunidad puede organizarse para desarrollar otros tipos de
+      contenido como por ejemplo podcast, videos, cursos, artículos y tutoriales, dependiendo de
+      las necesidades de los asistentes, recomendamos realizar una pequeña encuesta para conocer
+      mejor a la comunidad y poder ofrecer el mejor formato de contenido junto con las reuniones
+      que se realicen.
     </p>
   </section>
 </main>
