feat(conferences): add Angular Day. ngSpain ticketsUrl
fix PNG card layouts
allow conferences to not have a siteUrl
add logoType to conference metadata
move comma after city to the template

--- a/projects/web/src/app/conferences/conferences.component.scss
+++ b/projects/web/src/app/conferences/conferences.component.scss
@@ -31,8 +31,10 @@ main {
         }
 
         .mat-card-image {
-          width: 100%;
-          margin: auto;
+          &.svg {
+            width: 100%;
+            margin: auto;
+          }
         }
 
         .mat-card-actions {
