refactor(meetups): add link to footer. change nav order.
minor tweaks to new organize meetup page to prepare it for deployment

--- a/projects/web/src/app/footer/footer.component.html
+++ b/projects/web/src/app/footer/footer.component.html
@@ -10,13 +10,16 @@
            target="_blank">Regístrate</a>
       </li>
       <li>
-        <a href="https://chat.angular.lat/" rel="noopener" target="_blank">Chat</a>
+        <a href="https://chat.angular.lat/" rel="noopener" target="_blank">Chatear</a>
+      </li>
+      <li>
+        <a [routerLink]="['coc']">Código de conducta</a>
       </li>
       <li>
         <a [routerLink]="['conferencias']">Conferencias</a>
       </li>
       <li>
-        <a [routerLink]="['coc']">Código de conducta</a>
+        <a [routerLink]="['organizar/meetup']">Guía de Meetups</a>
       </li>
 <!--      <li>-->
 <!--        <a [routerLink]="['terminos']">Términos</a>-->
