fix(footer,top-nav): a11y improvements
add an npm task for mobile testing on local network
- allows serving on 0.0.0.0 and mobile device connecting at server's IP

--- a/projects/web/src/app/top-nav/top-nav.component.html
+++ b/projects/web/src/app/top-nav/top-nav.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z1">
+<mat-toolbar color="primary" class="mat-elevation-z1" role="banner">
   <button type="button" aria-label="Toggle sidenav" mat-icon-button
           (click)="navService.drawer.toggle()" *ngIf="navService.isHandset$ | async">
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
