chore(translation): Reemplaza boletas por entradas
Entradas es más inclusiva en Español neutro. Boletas es muy local a América Latina.

Closes #82

--- a/projects/web/src/app/conferences/conferences.component.html
+++ b/projects/web/src/app/conferences/conferences.component.html
@@ -15,7 +15,7 @@
             <a mat-button [href]="conference.siteUrl" *ngIf="conference.siteUrl" color="accent"
                rel="noopener" target="_blank">Sitio</a>
             <a mat-button [href]="conference.ticketsUrl" *ngIf="conference.ticketsUrl"
-               color="accent" rel="noopener" target="_blank">Boletas</a>
+               color="accent" rel="noopener" target="_blank">Entradas</a>
             <a mat-button [href]="conference.cfpUrl" *ngIf="conference.cfpUrl"
                color="accent" matTooltip="Convocatoria Para Presentadores" rel="noopener"
                target="_blank">CFP</a>
