--- a/projects/web/src/app/nav/nav.component.html
+++ b/projects/web/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
                [disableClose]="!(navService.isHandset$ | async)"
                [attr.role]="(navService.isHandset$ | async) ? 'dialog' : 'navigation'"
                [mode]="(navService.isHandset$ | async) ? 'over' : 'side'"
-               [opened]="!(navService.isHandset$ | async)">
+               [opened]="(navService.isHandset$ | async) === false">
     <mat-toolbar>Menú</mat-toolbar>
     <mat-nav-list (click)="onNavigation()">
       <a mat-list-item [routerLink]="['acerca']" routerLinkActive="active">
